--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <button id="copyButton">Copy text</button><br><br>
 
     <label for="inputBox2":>You entered: </label>
-    <input type="text" id="inputBox2" value="">
+    <input type="text" id="inputBox2" value="" disabled>
 
     <h3>2. Calculate a percentage</h3>
     <label for="numBox">Numerator:</label>
@@ -26,7 +26,10 @@
     
     <button id="percButton">Calculate %</button><br><br>
     <label for="percBox">Percentage: </label>
-    <input type="text" id="percBox" value="">
+    <input type="text" id="percBox" value="" disabled><br><br>
+    
+    <h3>3. Reset text boxes</h3>
+    <button id="resetButton">Reset</button>
 
     <script src="my-script.js"></script>
 
